--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,14 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             {% for webapp in webapps %}
             <a href="{{ webapp.url }}" class="block">
-                <div class="bg-gray-800 rounded-lg shadow-md p-6 hover:bg-gray-700 transition duration-300 h-full flex flex-col justify-center items-center text-center">
-                    <h2 class="text-xl font-semibold mb-2">{{ webapp.name }}</h2>
-                    <p class="text-gray-400">{{ webapp.description }}</p>
+                <div class="bg-gray-800 rounded-lg shadow-md p-4 hover:bg-gray-700 transition duration-300 h-full flex items-center">
+                    <div class="w-16 h-16 bg-gray-700 rounded-lg flex-shrink-0 mr-4 overflow-hidden">
+                        <img src="{{ webapp.favicon }}" alt="{{ webapp.name }} icon" class="w-full h-full object-cover">
+                    </div>
+                    <div>
+                        <h2 class="text-xl font-semibold mb-1">{{ webapp.name }}</h2>
+                        <p class="text-gray-400 text-sm">{{ webapp.description }}</p>
+                    </div>
                 </div>
             </a>
             {% endfor %}
